@@ -1098,6 +1098,25 @@ argument_list|(
 literal|"\tsyncing..."
 argument_list|)
 expr_stmt|;
+name|String
+index|[]
+name|ignorableFilenames
+init|=
+name|settings
+operator|.
+name|getIgnorableFilenames
+argument_list|()
+decl_stmt|;
+name|Collection
+name|ignoreList
+init|=
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|ignorableFilenames
+argument_list|)
+decl_stmt|;
 name|Collection
 name|existingArtifacts
 init|=
@@ -1106,6 +1125,8 @@ operator|.
 name|listAll
 argument_list|(
 name|fileRetrieveRoot
+argument_list|,
+name|ignoreList
 argument_list|)
 decl_stmt|;
 name|Collection
@@ -1122,6 +1143,8 @@ operator|.
 name|listAll
 argument_list|(
 name|ivyRetrieveRoot
+argument_list|,
+name|ignoreList
 argument_list|)
 decl_stmt|;
 if|if
