@@ -956,6 +956,77 @@ comment|// have been deleted
 block|}
 specifier|public
 name|void
+name|testSyncWithIgnoreList
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|project
+operator|.
+name|setProperty
+argument_list|(
+literal|"ivy.dep.file"
+argument_list|,
+literal|"test/repositories/1/org6/mod6.2/ivys/ivy-0.4.xml"
+argument_list|)
+expr_stmt|;
+name|retrieve
+operator|.
+name|setSync
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+operator|new
+name|File
+argument_list|(
+literal|"build/test/lib/.svn"
+argument_list|)
+operator|.
+name|mkdirs
+argument_list|()
+expr_stmt|;
+operator|new
+name|File
+argument_list|(
+literal|"build/test/lib/.svn/test.txt"
+argument_list|)
+operator|.
+name|createNewFile
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"build/test/lib/.svn/test.txt"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|retrieve
+operator|.
+name|execute
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"build/test/lib/.svn/test.txt"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testWithAPreviousResolve
 parameter_list|()
 throws|throws
